# dash

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  DEPLOY.md  MANIFEST.in  README.md  code_check.py  manage.py  pip-requires.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
dash/: __init__.py  context_processors.py  dash_email.py  test.py
dash/api/: __init__.py
dash/categories/: fields.py  models.py  urls.py  views.py
dash/categories/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20140820_1415.py  0002_categoryimage.py  0003_auto_20140904_0927.py  0003_categoryimage.py  0004_auto_20140904_0927.py  0004_auto_20140922_1514.py  0005_auto_20140922_1514.py  0006_auto_20141008_1955.py  0007_auto_20170301_0914.py  0008_alter_category_options.py  0009_auto_20210910_1450.py  0010_alter_category_created_by_alter_category_modified_by_and_more.py  0011_alter_category_unique_together_and_more.py
dash/categories/templates/categories/: categoryimage_list.html
dash/dashblocks/: models.py  urls.py  views.py
dash/dashblocks/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20140802_2112.py  0003_auto_20140804_0236.py  0004_auto_20140902_1200.py  0005_auto_20140904_0957.py  0006_auto_20140922_1514.py  0007_auto_20170301_0914.py  0008_auto_20210902_1125.py  0009_auto_20210910_1450.py  0010_alter_dashblock_created_by_and_more.py  0011_alter_dashblock_index_together_and_more.py  0012_rename_dashblock_org_is_active_dashblock_type_priority_dashblocks__org_id_024805_idx_and_more.py  0013_rename_dashblocks__org_id_024805_idx_dashblock_org_typ_prio_idx_and_more.py
dash/dashblocks/static/js/: summernote.min.js
dash/dashblocks/templates/dashblocks/: dashblock_form.haml  dashblock_form.html  dashblock_list.haml  dashblock_list.html  dashblock_update.html
dash/dashblocks/templatetags/: dashblocks.py
dash/orgs/: context_processors.py  forms.py  middleware.py  models.py  tasks.py  urls.py  views.py
dash/orgs/management/commands/: orgtasks.py
dash/orgs/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20140802_2104.py  0003_org_logo.py  0004_auto_20140804_1453.py  0005_orgbackground.py  0006_auto_20140919_2056.py  0007_auto_20140922_1514.py  0008_org_timezone.py  0009_auto_20150331_1452.py  0010_auto_20150414_1432.py  0010_auto_20150618_1042.py  0011_auto_20150710_1612.py  0012_auto_20150715_1816.py  0013_auto_20150715_1831.py  0014_auto_20150722_1419.py  0015_auto_20160209_0926.py  0016_taskstate_is_disabled.py  0017_auto_20161026_1513.py  0018_auto_20170301_0914.py  0019_resctructure_org_config.py  0019_restructure_org_config.py  0020_remove_org_api_token.py  0021_auto_20180315_0823.py  0022_populate_rapidpro_specific_config.py  0023_orgbackend.py  0024_populate_org_backend.py  0025_auto_20180321_1520.py  0025_auto_20180322_1415.py  0026_fix_org_config_rapidpro.py  0027_alter_org_config.py  0027_alter_org_options.py  0028_alter_org_config.py  0028_auto_20210910_1450.py  0029_auto_20211025_1504.py  0030_alter_invitation_created_by_and_more.py  0031_alter_orgbackend_index_together.py  0032_org_is_paused.py  0032_rename_orgbackend_org_is_active_slug_orgs_orgbac_org_id_607508_idx.py  0033_rename_orgs_orgbac_org_id_607508_idx_orgs_orgbac_org_slug_idx_and_more.py
dash/orgs/templates/orgs/: org_chooser.haml  org_chooser.html  org_home.haml  org_home.html  org_manage_accounts.haml  org_manage_accounts.html
dash/orgs/templates/orgs/email/: invitation_email.html  invitation_email.txt
dash/orgs/templatetags/: dashorgs.py
dash/stories/: models.py  urls.py  views.py
dash/stories/migrations/: 0001_initial.py  0001_squashed.py  0002_auto_20140805_1158.py  0003_story_summary.py  0004_auto_20140806_1540.py  0005_story_category.py  0006_auto_20140821_0859.py  0007_storyimage.py  0008_auto_20140912_0524.py  0009_remove_story_image.py  0010_auto_20140922_1514.py  0011_story_audio_link.py  0012_story_written_by.py  0013_auto_20170301_0914.py  0014_alter_storyimage_image.py  0015_story_attachment.py  0016_alter_story_created_by_alter_story_modified_by_and_more.py
dash/stories/templates/stories/: story_create.haml  story_create.html  story_list.html  story_update.haml  story_update.html
dash/tags/: models.py  urls.py  views.py
dash/tags/migrations/: 0001_initial.py  0001_squashed.py  0002_alter_tag_created_by_alter_tag_modified_by.py  0003_alter_tag_unique_together_and_more.py
dash/users/: urls.py  views.py
dash/utils/: __init__.py  email.py  haml.py  sync.py  temba.py  tests.py
dash/utils/management/commands/: hamlcompress.py
dash/utils/templatetags/: utils.py
dash_test_runner/: __init__.py  celeryapp.py  settings.py  settings_travis.py  tests.py  urls.py  wsgi.py
dash_test_runner/testapp/: models.py  tests.py  urls.py  views.py
dash_test_runner/testapp/migrations/: 0001_initial.py  0002_auto_20180312_1302.py  0003_auto_20180405_1238.py
dash_test_runner/testapp/templates/: tags_test.haml
media/test_api/: boundaries_missing_next_key.json  boundaries_page_1.json  boundaries_page_2.json
requirements/: base.txt  tests.txt
templates/orgs/: org_chooser.html  org_manage_accounts.haml
templates/orgs/email/: invitation_email.html  invitation_email.txt
templates/stories/: story_list.haml  story_update.haml
test_runner/: celeryapp.py  settings.py  settings_travis.py  tests.py  urls.py  wsgi.py
test_runner/testapp/: models.py  tests.py  views.py
test_runner/testapp/migrations/: 0001_initial.py  0002_auto_20180312_1302.py  0003_auto_20180405_1238.py
test_runner/testapp/templates/: tags_test.html
testfiles/test_api/: flows_missing_next_key.json  flows_page_1.json  flows_page_2.json
