[tool.poetry]
name = "rapidpro-dash"
version = "1.15.4"
description = "Support library for RapidPro dashboards"
authors = ["Nyaruka Ltd <code@nyaruka.com>"]
license = "BSD"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
packages = [
    { include = "dash" },
]

[tool.poetry.urls]
repository = "http://github.com/rapidpro/dash"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">= 4.2.14, < 5.1"
celery = "^5.1"
django-compressor = "^4.0"
django-redis = "^5.2.0"
django-timezone-field = "^6.1.0"
Pillow = ">=9.4,<11.0"
phonenumbers = "^8.12.16"
psycopg = "^3.1.9"
python-dateutil = "^2.8.2"
rapidpro-python = "^2.15.0"
smartmin = "^5.0.8"
sorl-thumbnail = "^12.9.0"
isort = {extras = ["pyproject"], version = "^5.10.1"}

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.13.2"
colorama = "^0.4.3"
coverage = {extras = ["toml"], version = "^7.2.2"}
ruff = "^0.3.3"
djlint = "^1.34.1"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "F405"]
fix = true
exclude = ["./.tox/*", "./.venv/*", "./env/*", "*/migrations/*", "./build/*"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["dash"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests*", "*__init__*", "*settings*", "*management/commands*", "dash/test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
