[project]
name = "rapidpro-dash"
version = "1.18.0"
description = "Support library for RapidPro dashboards"
authors = [
    {"name" = "Nyaruka", "email" = "code@nyaruka.com"}
]
license = { text = "BSD" }
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "Django (>= 5.1.9 ,< 5.3)",
    "celery ~= 5.1",
    "django-compressor >= 4.0",
    "django-redis >= 5.2.0",
    "django-timezone-field >= 6.1.0",
    "Pillow >= 9.4",
    "phonenumbers >=8.12.16",
    "psycopg >= 3.1.9",
    "python-dateutil >=2.8.2",
    "rapidpro-python >= 2.15.0",
    "smartmin (>=5.2.0,<6.0.0)",
    "sorl-thumbnail >= 12.9.0",
    "isort[pyproject] >= 5.13.2",
]

[tool.poetry]
packages = [
    { include = "dash" },
]

[tool.poetry.urls]
"Repository" = "http://github.com/rapidpro/dash"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
colorama = "^0.4.3"
coverage = {extras = ["toml"], version = "^7.2.2"}
ruff = "^0.3.3"
djlint = "^1.34.1"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
fix = true
exclude = ["./.tox/*", "./.venv/*", "./env/*", "*/migrations/*", "./build/*"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "F405"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["dash"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests*", "*__init__*", "*settings*", "*management/commands*", "dash/test.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"