[project]
name = "rapidpro-dash"
version = "1.20.0"
description = "Support library for RapidPro dashboards"
authors = [
    {"name" = "Nyaruka", "email" = "code@nyaruka.com"}
]
license = { text = "BSD" }
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
requires-python = ">=3.12,<4.0"

dependencies = [
    "Django (>= 5.2.12,< 6.1)",
    "celery[redis] ~= 5.5.3",
    "django-compressor >= 4.0",
    "django-timezone-field >= 6.1.0",
    "Pillow >= 12.2.0",
    "phonenumbers >=8.12.16",
    "psycopg >= 3.1.9",
    "python-dateutil >=2.8.2",
    "rapidpro-python (>=2.22.2,<3.0.0)",
    "smartmin (>=6.0.0,<6.1.0)",
    "sorl-thumbnail >= 12.9.0",
    "django-valkey (>=0.2.1,<0.3.0)",
]

[project.optional-dependencies]
dev = [
    "colorama >= 0.4.3",
    "coverage[toml] >= 7.2.2",
    "ruff >= 0.15.7",
    "djlint >= 1.34.1",
]

[project.urls]
Repository = "http://github.com/rapidpro/dash"

[tool.ruff]
line-length = 120
fix = true
exclude = ["./.tox/*", "./.venv/*", "./env/*", "*/migrations/*", "./build/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F405"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.coverage.run]
source = ["dash"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests*", "*__init__*", "*settings*", "*management/commands*", "dash/test.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dash"]
